<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_post_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        android:padding="20dp"
        android:text="@string/placeholder_title"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/light_text"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/posted_by"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text"/>

        <TextView
            android:id="@+id/text_view_post_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_user_id"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_post_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/placeholder_body"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text"/>
</LinearLayout>
