<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/text_view_list_post_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posted_by"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/text_view_list_post_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_user_id"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primary_text"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/text_view_list_post_by"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/text_view_list_post_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/placeholder_title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/secondary_text"
        android:layout_toRightOf="@+id/text_view_list_post_user_id"
        android:layout_centerVertical="true"/>
</RelativeLayout>